--- a/Festival/config.json
+++ b/Festival/config.json
@@ -6,10 +6,10 @@
   "info" : {
     "apple_id": "1529006564",
     "contact": "hakanerenprod@gmail.com",
-    "eula": "https://hakan.github.io/Festival/eula.html",
-    "privacy": "https://hakan.github.io/Festival/privacy.html",
-    "support": "https://hakan.github.io/Festival/support.html",
-    "terms": "https://hakan.github.io/Festival/terms.html"
+    "eula": "https://he.github.io/Festival/eula.html",
+    "privacy": "https://he.github.io/Festival/privacy.html",
+    "support": "https://he.github.io/Festival/support.html",
+    "terms": "https://he.github.io/Festival/terms.html"
   },
   "limits": {
     "is_ads_enabled": true,
