--- a/Festival/config.json
+++ b/Festival/config.json
@@ -12,12 +12,12 @@
     "terms": "https://he.github.io/Festival/terms.html"
   },
   "limits": {
-    "is_ads_enabled": true,
-    "feed": 5,
-    "profile": 1,
-    "profile_picture_hd": 1,
-    "save": 10,
-    "story": 5
+    "is_ads_enabled": false,
+    "feed": 500,
+    "profile": 100,
+    "profile_picture_hd": 100,
+    "save": 100,
+    "story": 500
   },
   "versions": {
     "latest": "1.0",
