--- a/Festival/config.json
+++ b/Festival/config.json
@@ -3,7 +3,7 @@
     "cookie": "sessionid=4288523810%3A6bAFxAEhAN4KSK%3A11",
     "user_agent": "Mozilla/5.0 (iPhone; CPU iPhone OS 12_3_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 Instagram 105.0.0.11.118 (iPhone9,1; iOS 12_3_1; en_US; en-US; scale=2.00; 750x1334; 165586599)"
   },
-  "info" : {
+  "info": {
     "apple_id": "1529006564",
     "contact": "hakanerenprod@gmail.com",
     "eula": "https://he.github.io/Festival/eula.html",
@@ -17,11 +17,12 @@
     "profile": 100,
     "profile_picture_hd": 100,
     "save": 100,
-    "story": 500
+    "story": 500,
+    "download": 500
   },
   "versions": {
-    "latest": "1.0",
-    "minimum": "1.0",
-    "next": "1.0"
+    "latest": "1.0.0",
+    "minimum": "1.0.0",
+    "next": "1.0.0"
   }
 }
