--- a/Festival/config.json
+++ b/Festival/config.json
@@ -1,6 +1,6 @@
 {
   "authentication": {
-    "cookie": "sessionid=4288523810%3A6bAFxAEhAN4KSK%3A11",
+    "cookie": "sessionid=32802615070%3AS8FiBXGPTlYrOe%3A8",
     "user_agent": "Mozilla/5.0 (iPhone; CPU iPhone OS 12_3_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 Instagram 105.0.0.11.118 (iPhone9,1; iOS 12_3_1; en_US; en-US; scale=2.00; 750x1334; 165586599)"
   },
   "info": {
