--- a/Festival/config.json
+++ b/Festival/config.json
@@ -12,7 +12,7 @@
     "terms": "https://he.github.io/Festival/terms.html"
   },
   "limits": {
-    "is_ads_enabled": false,
+    "is_ads_enabled": true,
     "feed": 500,
     "profile": 100,
     "profile_picture_hd": 100,
