--- a/Festival/config.json
+++ b/Festival/config.json
@@ -6,7 +6,7 @@
   },
   "info": {
     "apple_id": "1559436566",
-    "contact": "hakanerenprod@gmail.com",
+    "contact": "okan.ates@hotmail.com",
     "eula": "https://he.github.io/Festival/eula.html",
     "privacy": "https://he.github.io/Festival/privacy.html",
     "support": "https://he.github.io/Festival/support.html",
