--- a/Festival/config.json
+++ b/Festival/config.json
@@ -1,8 +1,8 @@
 {
   "authentication": {
-    "cookie": "sessionid=44542663742%3AqxbFr6BjroiK91%3A23",
-    "sessionId": "10126683263%3Azp6JJuE9rhfrnK%3A18",
-    "userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 12_3_1 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 Instagram 105.0.0.11.118 (iPhone9,1; iOS 12_3_1; en_US; en-US; scale=2.00; 750x1334; 165586599)"
+    "cookie": "sessionid=32802615070%3AS8FiBXGPTlYrOe%3A8",
+    "sessionId": "sessionid=32802615070%3AS8FiBXGPTlYrOe%3A8",
+    "userAgent": "Instagram 100.0.0.17.129 Android (23/6.0.1; 640dpi; 1440x2560; samsung; SM-G935F; hero2lte; samsungexynos8890; tr_TR; 161478673"
   },
   "info": {
     "apple_id": "1559436566",
