--- a/Festival/config.json
+++ b/Festival/config.json
@@ -1,6 +1,6 @@
 {
   "authentication": {
-    "cookie": "csrftoken=u3XCQg0lh6RdVZWEFQW9JdcIh6rl2vip; urlgen=\"{\"95.70.128.230\": 12735}:1jaMmJ:xyHvV_4lpO1LhSalXpmh-n9CsMM\"; ig_did=39D61DF5-69B3-4D3C-9A7D-063CD320F91D; mid=XsFmsQAEAAHIKXVLXo2z9IOGXliI",
+    "cookie": "sessionid=32802615070%3AS8FiBXGPTlYrOe%3A8",
     "sessionId": "sessionid=32802615070%3AS8FiBXGPTlYrOe%3A8",
     "userAgent": "Instagram 100.0.0.17.129 Android (23/6.0.1; 640dpi; 1440x2560; samsung; SM-G935F; hero2lte; samsungexynos8890; tr_TR; 161478673"
   },
